# mog2d

./: .gitignore  LICENSE  README.md
Mog2d-Android/: .gitignore  build.gradle
Mog2d-Android/app/: CMakeLists-base.txt  CMakeLists.txt  build.gradle
Mog2d-Android/app/release/: output.json
Mog2d-Android/app/src/main/: AndroidManifest.xml
Mog2d-Android/app/src/main/java/org/mog2d/: MogActivity.java  MogFunction.java  MogJniBridge.java  MogRenderer.java  MogStatsView.java  TextBitmap.java
Mog2d-Android/app/src/main/res/values/: strings.xml
Mog2d-Android/gradle/wrapper/: gradle-wrapper.properties
Mog2d-Emscripten/: em_build
Mog2d-Mac/Mog2d-Mac/: AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
Mog2d-Mac/Mog2d-Mac.xcodeproj/: project.pbxproj
Mog2d-Mac/Mog2d-Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mog2d-Mac/Mog2d-Mac/Base.lproj/: Main.storyboard
Mog2d-Qt/: Mog2d-Qt.pro  mainwindow.h  mainwindow.ui  make_qrc.sh  mogglwidget.cpp  mogglwidget.h
Mog2d-iOS/: .gitignore
Mog2d-iOS/Mog2d-iOS/: main.m
Mog2d-iOS/Mog2d-iOS.xcodeproj/: project.pbxproj
classes/app/: App.cpp  App.h
classes/mog/: Constants.h  mog.h
classes/mog/base/: AppBase.cpp  AppBase.h  BatchingGroup.cpp  BatchingGroup.h  Circle.cpp  Circle.h  DrawEntity.cpp  DrawEntity.h  Drawable.cpp  Drawable.h  DrawableGroup.cpp  DrawableGroup.h  Entity.cpp  Entity.h  Graphics.h  Group.cpp  Group.h  Label.cpp  Label.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  RoundedRectangle.cpp  RoundedRectangle.h  Scene.cpp  Scene.h  Slice9Sprite.cpp  Slice9Sprite.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Triangle.cpp  Triangle.h
classes/mog/core/: AudioPlayer.cpp  AudioPlayer.h  Collision.cpp  Collision.h  Data.cpp  Data.h  DataStore.cpp  DataStore.h  Density.cpp  Density.h  Engine.cpp  Engine.h  FileUtils.cpp  FileUtils.h  Http.cpp  Http.h  MogStats.cpp  MogStats.h  MogUILoader.cpp  NativeClass.h  NativePlugin.cpp  NativePlugin.h  Preference.cpp  PubSub.cpp  PubSub.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  Touch.h  TouchEventListener.cpp  TouchEventListener.h  TouchEventManager.cpp  TouchEventManager.h  TouchInput.h  Transform.h  Tween.cpp  Tween.h  (+4 more)
classes/mog/libs/: http.h  json.c  rpmalloc.c  stb_image.h
classes/mog/plugins/: plugins.h
classes_android/mog/core/: AudioPlayerNative.cpp  AudioPlayerNative.h  Device.h  EngineNative.cpp  EngineNative.h  FileUtilsNative.cpp  HttpNative.cpp  NativeClass.cpp  PreferenceNative.cpp  PreferenceNative.h  Texture2DNative.cpp  Texture2DNative.h  mog_functions_native.cpp  opengl.h
classes_android/mog/os/: AndroidHelper.h  Java_MogJniBridge.cpp  MogStatsView.cpp
classes_ios/mog/core/: AudioPlayerNative.h  AudioPlayerNative.mm  Device.mm  FileUtilsNative.mm  HttpNative.mm  NativeClass.mm  Texture2DNative.h  Texture2DNative.mm  opengl.h
classes_ios/mog/os/: IOSHelper.h  MogAppDelegate.h  MogAppDelegate.m  MogEngineController.h  MogEngineController.mm  MogStatsView.h  MogStatsView.mm  MogView.h  MogView.m  MogViewController.h  MogViewController.m
classes_mac/mog/core/: AudioPlayerNative.h  AudioPlayerNative.mm  Device.mm  FileUtilsNative.h  FileUtilsNative.mm  Texture2DNative.h  Texture2DNative.mm
classes_mac/mog/os/: MacHelper.h  MogAppDelegate.h  MogAppDelegate.m  MogEngineController.h  MogEngineController.mm  MogFunction.h  MogFunction.m  MogStatsView.mm  MogTouchEventDelegate.h  MogView.h  MogView.m  MogViewController.h  MogViewController.m
classes_qt/mog/core/: AudioPlayerNative.cpp  AudioPlayerNative.h  Device.cpp  FileUtilsNative.cpp  FileUtilsNative.h  Texture2DNative.cpp  Texture2DNative.h  mog_functions_native.cpp  opengl.h
classes_qt/mog/os/: MogStatsView.h  mogenginecontroller.cpp  mogenginecontroller.h
sources/app/: App.cpp  App.h  SampleScene.cpp  SampleScene.h
sources/mog/: Constants.h  mog.h
sources/mog/base/: AlignmentGroup.cpp  AlignmentGroup.h  AppBase.cpp  AppBase.h  Circle.cpp  Circle.h  Drawable.cpp  Drawable.h  DrawableContainer.cpp  DrawableContainer.h  DrawableGroup.cpp  DrawableGroup.h  Entity.cpp  Entity.h  Graphics.cpp  Graphics.h  Group.cpp  Group.h  HorizontalGroup.cpp  HorizontalGroup.h  Label.cpp  Label.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  RoundedRectangle.cpp  RoundedRectangle.h  Scene.cpp  Scene.h  ScrollGroup.cpp  ScrollGroup.h  Slice9Sprite.cpp  Slice9Sprite.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  (+6 more)
sources/mog/core/: AudioPlayer.cpp  AudioPlayer.h  Collision.cpp  Collision.h  Data.cpp  Data.h  DataStore.cpp  DataStore.h  Density.cpp  Density.h  Engine.cpp  Engine.h  EntityCreator.cpp  EntityCreator.h  FileUtils.cpp  FileUtils.h  Http.cpp  Http.h  Json.cpp  Json.h  KeyEvent.h  MogStats.cpp  MogStats.h  MogUILoader.cpp  MogUILoader.h  NativeClass.h  Preference.cpp  Preference.h  PubSub.cpp  PubSub.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  (+15 more)
sources/mog/libs/: aes.h  json.c  sha256.cpp  sha256.h  stb_image.h
sources_android/mog/: ConstantsNative.h
sources_android/mog/core/: AudioPlayerNative.cpp  AudioPlayerNative.h  Device.cpp  FileUtilsNative.cpp  FileUtilsNative.h  HttpNative.cpp  HttpNative.h  NativeClass.cpp  PreferenceNative.cpp  Texture2DNative.cpp  Texture2DNative.h  mog_functions_native.h
sources_android/mog/os/: AndroidHelper.cpp  AndroidHelper.h  JNILocalFrame.cpp  JNILocalFrame.h  Java_MogJniBridge.cpp
sources_android/mog/os_java/: AndroidManifest.xml
sources_emscripten/: main.cpp
sources_emscripten/mog/: ConstantsNative.h
sources_emscripten/mog/core/: AudioPlayerNative.cpp  AudioPlayerNative.h  Device.cpp  FileUtilsNative.cpp  FileUtilsNative.h  HttpNative.cpp  PreferenceNative.cpp  Texture2DNative.cpp  Texture2DNative.h  mog_functions_native.cpp  opengl.h
sources_emscripten/mog/libs/: stb_vorbis.h
sources_emscripten/mog/os/: MogEngineController.cpp  MogEngineController.h
sources_ios/mog/: ConstantsNative.h
tools/: em_build
(+44 files in other folders)
